--- a/forum/index.html
+++ b/forum/index.html
@@ -30,7 +30,7 @@
 	<link rel="stylesheet" href="responsive.css" />
 	<link href="https://fonts.googleapis.com/css?family=Paytone+One" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-	
+
 
 
 
@@ -194,7 +194,7 @@
 										<center>
 											<div class="textecentrer">
 												<p class="texteintro">Nous vous proposons divers topics de discussions comme
-													<a href="https://energygaming.fr/forum/index.php?forums/energyplay.57/" class="lienvisible">EnergyPlay</a> ou bien
+													<a href="https://energygaming.fr/forum/index.php?forums/energyplay.57/" class="lienvisible">EnergyPlay</a> ,
 													<a href="https://energygaming.fr/forum/index.php?forums/rapport-de-bugs.14/" class="lienvisible">Rapport de bugs</a> ou simplement la
 													<a href="https://energygaming.fr/forum/index.php?forums/taverne.86/" class="lienvisible">Taverne</a> pour parler de tout et de rien !
 											</div>
@@ -3374,21 +3374,21 @@
 					<ul class="footerLinks">
 
 
-						<li>
-							<a href="index.php?misc/contact" class="OverlayTrigger" data-overlayOptions="{&quot;fixed&quot;:false}">Nous contacter</a>
+						<li class="listefoot">
+							<a class="lienbarfoot" href="index.php?misc/contact" class="OverlayTrigger" data-overlayOptions="{&quot;fixed&quot;:false}">NOUS CONTACTER</a>
 						</li>
 
-						<li>
-							<a href="index.php?help/">Aide</a>
+						<li class="listefoot">
+							<a class="lienbarfoot" href="index.php?help/">AIDE</a>
 						</li>
-						<li>
-							<a href="http://energygaming.fr" class="homeLink">Accueil</a>
+						<li class="listefoot">
+							<a class="lienbarfoot" href="http://energygaming.fr" class="homeLink">ACCEUIL</a>
 						</li>
-						<li>
-							<a href="/forum/index.php#navigation" class="topLink">Haut</a>
+						<li class="listefoot">
+							<a class="lienbarfoot" href="/forum/index.php#navigation" class="topLink">HAUT</a>
 						</li>
-						<li>
-							<a href="index.php?forums/-/index.rss" rel="alternate" class="globalFeed" target="_blank" title="Flux RSS pour EnergyGaming">RSS</a>
+						<li class="listefoot">
+							<a class="lienbarfoot" href="index.php?forums/-/index.rss" rel="alternate" class="globalFeed" target="_blank" title="Flux RSS pour EnergyGaming">RSS</a>
 						</li>
 
 					</ul>
@@ -3403,19 +3403,19 @@
 				<div class="pageContent">
 					<ul id="legal">
 
-						<li>
-							<a href="index.php?help/terms">Conditions et règles</a>
+						<li class="listefootleft">
+							<a class="lienbarfoot" href="index.php?help/terms">CONDITIONS ET REGLES</a>
 						</li>
 
 
 					</ul>
-
-					<div id="copyright">
-						<a href="http://energygaming.fr/" class="concealed">EnergyGaming
-							<span>&copy; 2015-2017 Inc.</span>
-						</a>
-					</div>
-
+					<center>
+						<div id="copyright">
+							<a class="lienbarfoot" id="final" href="http://energygaming.fr/" class="concealed">EnergyGaming
+								<span>&copy; 2015-2018 Inc.</span>
+							</a>
+						</div>
+					</center>
 
 
 
