--- a/forum/index.html
+++ b/forum/index.html
@@ -1,7 +1,4 @@
-<!--$("button").click(function(){
-    var x = $("p").position();
-    alert("Top: " + x.top + " Left: " + x.left);
-});-->
+<!--penser à mettre les liens logo-->
 
 
 
@@ -123,7 +120,20 @@
 
 										</div>
 									</nav>
-									<div class="fondtab"></div>
+									<div class="fondtab">
+										<div class="conteneurprofil">
+											<img class="facebook" src="logofacebook.png" />
+											<img class="tweeter" src="logotweeter.png" />
+											<br>
+											<a href="index.php?members/snipttx.638/ " class="avatar Av638m " data-avatarhtml="true ">
+												<img src="avatar.jpg" class="avatar1" alt="SnipttX " />
+											</a>
+											<br>
+											<a href="index.php?members/snipttx.638/ " class="username NoOverlay textetitre4" dir="auto ">SnipttX</a>
+											<p class="textetitre4"> : </p>
+											<div class="muted textetitre4">Famous</div>
+										</div>
+									</div>
 
 
 
@@ -220,103 +230,103 @@
 									</div>
 									<div class="milieu">
 										<center>
-										<div id="searchBar" class="pageWidth">
+											<div id="searchBar" class="pageWidth">
 
-											<span id="QuickSearchPlaceholder" title="Rechercher">Rechercher</span>
-											<fieldset id="QuickSearch">
-												<form action="index.php?search/search" method="post" class="formPopup">
+												<span id="QuickSearchPlaceholder" title="Rechercher">Rechercher</span>
+												<fieldset id="QuickSearch">
+													<form action="index.php?search/search" method="post" class="formPopup">
 
-													<div class="primaryControls">
-														<!-- block: primaryControls -->
-														<input type="search" name="keywords" value="" class="textCtrl" placeholder="Rechercher..." results="0" title="Entrez votre recherche et appuyez sur entrer"
-														    id="QuickSearchQuery" />
-														<!-- end block: primaryControls -->
-													</div>
+														<div class="primaryControls">
+															<!-- block: primaryControls -->
+															<input type="search" name="keywords" value="" class="textCtrl" placeholder="Rechercher..." results="0" title="Entrez votre recherche et appuyez sur entrer"
+															    id="QuickSearchQuery" />
+															<!-- end block: primaryControls -->
+														</div>
 
-													<div class="secondaryControls">
-														<div class="controlsWrapper">
+														<div class="secondaryControls">
+															<div class="controlsWrapper">
 
-															<!-- block: secondaryControls -->
-															<dl class="ctrlUnit">
+																<!-- block: secondaryControls -->
+																<dl class="ctrlUnit">
+																	<dt></dt>
+																	<dd>
+																		<ul>
+																			<li>
+																				<label>
+																					<input type="checkbox" name="title_only" value="1" id="search_bar_title_only" class="AutoChecker" data-uncheck="#search_bar_thread"
+																					/> Rechercher par titre uniquement</label>
+																			</li>
+																		</ul>
+																	</dd>
+																</dl>
+
+																<dl class="ctrlUnit">
+																	<dt>
+																		<label for="searchBar_users">Posté par un membre:</label>
+																	</dt>
+																	<dd>
+																		<input type="text" name="users" value="" class="textCtrl AutoComplete" id="searchBar_users" />
+																		<p class="explain">Séparer les noms avec une virgule.</p>
+																	</dd>
+																</dl>
+
+																<dl class="ctrlUnit">
+																	<dt>
+																		<label for="searchBar_date">Plus récent que:</label>
+																	</dt>
+																	<dd>
+																		<input type="date" name="date" value="" class="textCtrl" id="searchBar_date" />
+																	</dd>
+																</dl>
+
+
+															</div>
+															<!-- end block: secondaryControls -->
+
+															<dl class="ctrlUnit submitUnit">
 																<dt></dt>
 																<dd>
-																	<ul>
-																		<li>
-																			<label>
-																				<input type="checkbox" name="title_only" value="1" id="search_bar_title_only" class="AutoChecker" data-uncheck="#search_bar_thread"
-																				/> Rechercher par titre uniquement</label>
-																		</li>
-																	</ul>
+																	<input type="submit" value="Rechercher" class="button primary Tooltip" title="Trouver maintenant" />
+																	<div class="Popup" id="commonSearches">
+																		<a rel="Menu" class="button NoPopupGadget Tooltip" title="Recherches utiles" data-tipclass="flipped">
+																			<span class="arrowWidget"></span>
+																		</a>
+																		<div class="Menu">
+																			<div class="primaryContent menuHeader">
+																				<h3>Recherches utiles</h3>
+																			</div>
+																			<ul class="secondaryContent blockLinksList">
+																				<!-- block: useful_searches -->
+																				<li>
+																					<a href="index.php?find-new/posts&amp;recent=1" rel="nofollow">Messages récents</a>
+																				</li>
+
+																				<li>
+																					<a href="index.php?search/member&amp;user_id=638&amp;content=thread">Vos discussions</a>
+																				</li>
+																				<li>
+																					<a href="index.php?search/member&amp;user_id=638&amp;content=post">Vos messages</a>
+																				</li>
+																				<li>
+																					<a href="index.php?search/member&amp;user_id=638&amp;content=profile_post">Vos messages de profil</a>
+																				</li>
+
+																				<!-- end block: useful_searches -->
+																			</ul>
+																		</div>
+																	</div>
+																	<a href="index.php?search/" class="button moreOptions Tooltip" title="Recherche avancée">Plus...</a>
 																</dd>
 															</dl>
-
-															<dl class="ctrlUnit">
-																<dt>
-																	<label for="searchBar_users">Posté par un membre:</label>
-																</dt>
-																<dd>
-																	<input type="text" name="users" value="" class="textCtrl AutoComplete" id="searchBar_users" />
-																	<p class="explain">Séparer les noms avec une virgule.</p>
-																</dd>
-															</dl>
-
-															<dl class="ctrlUnit">
-																<dt>
-																	<label for="searchBar_date">Plus récent que:</label>
-																</dt>
-																<dd>
-																	<input type="date" name="date" value="" class="textCtrl" id="searchBar_date" />
-																</dd>
-															</dl>
-
 
 														</div>
-														<!-- end block: secondaryControls -->
 
-														<dl class="ctrlUnit submitUnit">
-															<dt></dt>
-															<dd>
-																<input type="submit" value="Rechercher" class="button primary Tooltip" title="Trouver maintenant" />
-																<div class="Popup" id="commonSearches">
-																	<a rel="Menu" class="button NoPopupGadget Tooltip" title="Recherches utiles" data-tipclass="flipped">
-																		<span class="arrowWidget"></span>
-																	</a>
-																	<div class="Menu">
-																		<div class="primaryContent menuHeader">
-																			<h3>Recherches utiles</h3>
-																		</div>
-																		<ul class="secondaryContent blockLinksList">
-																			<!-- block: useful_searches -->
-																			<li>
-																				<a href="index.php?find-new/posts&amp;recent=1" rel="nofollow">Messages récents</a>
-																			</li>
+														<input type="hidden" name="_xfToken" value="638,1526024684,8e37c79cf3fed996c79fdbe4385a592a1470eb54" />
+													</form>
+												</fieldset>
 
-																			<li>
-																				<a href="index.php?search/member&amp;user_id=638&amp;content=thread">Vos discussions</a>
-																			</li>
-																			<li>
-																				<a href="index.php?search/member&amp;user_id=638&amp;content=post">Vos messages</a>
-																			</li>
-																			<li>
-																				<a href="index.php?search/member&amp;user_id=638&amp;content=profile_post">Vos messages de profil</a>
-																			</li>
-
-																			<!-- end block: useful_searches -->
-																		</ul>
-																	</div>
-																</div>
-																<a href="index.php?search/" class="button moreOptions Tooltip" title="Recherche avancée">Plus...</a>
-															</dd>
-														</dl>
-
-													</div>
-
-													<input type="hidden" name="_xfToken" value="638,1526024684,8e37c79cf3fed996c79fdbe4385a592a1470eb54" />
-												</form>
-											</fieldset>
-
-										</div>
-									</center>
+											</div>
+										</center>
 									</div>
 									<div class="droite">
 										<div class="bandohorisontal">
@@ -2549,9 +2559,7 @@
 								<div class="section visitorPanel ">
 									<div class="secondaryContent ">
 
-										<a href="index.php?members/snipttx.638/ " class="avatar Av638m " data-avatarhtml="true ">
-											<img src="data/avatars/m/0/638.jpg?1502989244 " width="96 " height="96 " alt="SnipttX " />
-										</a>
+
 
 										<div class="visitorText ">
 											<h2>
@@ -2593,15 +2601,21 @@
 
 								<div class="section staffOnline avatarList ">
 									<div class="secondaryContent ">
+										<div class="blokpage2">
+											<p> </p>
+										</div>
 										<h3>
 											<a href="index.php?members/&amp;type=staff ">
-												<i class="fa fa-gavel "></i>Membres de l'équipe en ligne </a>
+												<i class="fa fa-gavel "></i>
+												<p class="textetitre3">Membres de l'équipe en ligne</p>
+											</a>
 										</h3>
 										<ul>
+											<br>
 
 
 
-
+											<br>
 
 											<li>
 												<a href="index.php?members/gnar.2710/ " class="avatar Av2710s " data-avatarhtml="true ">
@@ -2638,84 +2652,90 @@
 								<!-- block: sidebar_online_users -->
 								<div class="section membersOnline userList ">
 									<div class="secondaryContent ">
-										<h3>
-											<i class="fa fa-users "></i>
-											<a href="index.php?online/ " title="Voir l 'ensemble des utilisateurs en ligne">Membres en ligne</a>
-										</h3>
-
-
-
-
-
-										<h4 class="minorHeading">
-											<a href="index.php?account/following">Personnes que vous suivez:</a>
-										</h4>
-										<ul class="followedOnline">
-
-
-
-
-
-											<li title="gnar" class="Tooltip">
-												<a href="index.php?members/gnar.2710/" class="avatar Av2710s _plainImage" data-avatarhtml="true">
-													<img src="data/avatars/s/2/2710.jpg?1498762025" width="48" height="48" alt="gnar" />
-												</a>
-											</li>
-
-
-
-
-
-
-
-										</ul>
-										<h4 class="minorHeading">
-											<a href="index.php?members/">Membres:</a>
-										</h4>
-
-
-
-										<ol class="listInline">
-
-
-											<li>
-
-												<a href="index.php?members/snipttx.638/" dir="auto" class="username">SnipttX</a>,
-
-											</li>
-
-
-
-											<li>
-
-												<a href="index.php?members/gnar.2710/" dir="auto" class="username followed">gnar</a>,
-
-											</li>
-
-
-
-											<li>
-
-												<a href="index.php?members/the_angelss.1571/" dir="auto" class="username">The_Angelss</a>,
-
-											</li>
-
-
-
-											<li>
-
-												<a href="index.php?members/zeluix.2917/" dir="auto" class="username">Zeluix</a>
-
-											</li>
-
-
-
-										</ol>
-
-
-										<div class="footnote">
-											Total: 13 (membres: 4, visiteurs: 3, robots: 6)
+										<div class="blokpage2">
+											<p> </p>
 										</div>
+										<h3>
+											<a href="index.php?online/ " title="Voir l 'ensemble des utilisateurs en ligne">
+												<i class="fa fa-users "></i>
+												<p class="textetitre3">Membres en ligne</p>
+											</a>
+										</h3>
+										<ul>
+											<br>
+
+
+
+
+											<h4 class="minorHeading">
+												<a href="index.php?account/following">Personnes que vous suivez:</a>
+											</h4>
+											<ul class="followedOnline">
+
+
+
+
+
+												<li title="gnar" class="Tooltip">
+													<a href="index.php?members/gnar.2710/" class="avatar Av2710s _plainImage" data-avatarhtml="true">
+														<img src="data/avatars/s/2/2710.jpg?1498762025" width="48" height="48" alt="gnar" />
+													</a>
+												</li>
+
+
+
+
+
+
+
+											</ul>
+											<h4 class="minorHeading">
+												<a href="index.php?members/">Membres:</a>
+											</h4>
+
+
+
+											<ol class="listInline">
+
+
+												<li>
+
+													<a href="index.php?members/snipttx.638/" dir="auto" class="username">SnipttX</a>,
+
+												</li>
+
+
+
+												<li>
+
+													<a href="index.php?members/gnar.2710/" dir="auto" class="username followed">gnar</a>,
+
+												</li>
+
+
+
+												<li>
+
+													<a href="index.php?members/the_angelss.1571/" dir="auto" class="username">The_Angelss</a>,
+
+												</li>
+
+
+
+												<li>
+
+													<a href="index.php?members/zeluix.2917/" dir="auto" class="username">Zeluix</a>
+
+												</li>
+
+
+
+											</ol>
+
+
+											<div class="footnote">
+												Total: 13 (membres: 4, visiteurs: 3, robots: 6)
+											</div>
 									</div>
 								</div>
 								<!-- end block: sidebar_online_users -->
@@ -2726,10 +2746,17 @@
 
 								<div class="section profilePostList">
 									<div class="secondaryContent">
+										<div class="blokpage2">
+											<p> </p>
+										</div>
 										<h3>
 											<a href="index.php?find-new/profile-posts">
-												<i class="fa fa-commenting-o"></i>Nouveaux messages de profil</a>
+												<i class="fa fa-commenting-o"></i>
+												<p class="textetitre3">Nouveaux messages de profil</p>
+											</a>
 										</h3>
+										<br>
+
 
 
 										<form action="index.php?members/snipttx.638/post" method="post" id="ProfilePoster" class="statusPoster AutoValidator" data-optInOut="OptIn"
@@ -2963,8 +2990,15 @@
 								<!-- block: forum_stats -->
 								<div class="section">
 									<div class="secondaryContent statsList" id="boardStats">
+										<div class="blokpage2">
+											<p> </p>
+										</div>
 										<h3>
-											<i class="fa fa-info-circle"></i>Statistiques du forum</h3>
+											<i class="fa fa-info-circle"></i>
+											<p class="textetitre3">Statistiques du forum</p>
+											</a>
+										</h3>
+										<br>
 										<div class="pairsJustified">
 											<dl class="discussionCount">
 												<dt>Discussions:</dt>
