--- a/index.html
+++ b/index.html
@@ -363,6 +363,9 @@
                 <p class="paragraphe">
                     <a href="page.html"><button type="button" class="btn btn-danger">clique ici pour aller sur mon site web !</button></a>
                 </p>
+                <p class="paragraphe">
+                    <a href="page.html"><button type="button" class="btn btn-danger">clique ici pour aller le nouveau site web en création !</button></a>
+                </p>
                 <p class="paragraphe" id="age">
 
 
